+ Copy some more Python modules from LibPack

--- a/data/examples/CMakeLists.txt
+++ b/data/examples/CMakeLists.txt
@@ -18,7 +18,7 @@ if(NOT "${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
 endif()
 
 if (WIN32 AND FREECAD_LIBPACK_USE)
-    set(FREECAD_LIBPACK_FILES ${FREECAD_LIBPACK_PIVY_COIN} ${FREECAD_LIBPACK_PIVY_SOQT} ${FREECAD_LIBPACK_PYSIDE})
+    set(FREECAD_LIBPACK_FILES ${FREECAD_LIBPACK_PIVY_COIN} ${FREECAD_LIBPACK_PIVY_SOQT} ${FREECAD_LIBPACK_PYSIDE} ${FREECAD_LIBPACK_PYTHON})
     add_custom_target(LibPack_Files ALL SOURCES ${FREECAD_LIBPACK_FILES})
 
     # pivy
@@ -65,6 +65,21 @@ if (WIN32 AND FREECAD_LIBPACK_USE)
     )
     endforeach (it)
     SOURCE_GROUP("PySide" FILES ${FREECAD_LIBPACK_PYSIDE})
+
+    # Python extension modules
+    foreach (it ${FREECAD_LIBPACK_PYTHON})
+        get_filename_component(libfile ${it} NAME)
+        set(out "${CMAKE_BINARY_DIR}/DLLs/${libfile}")
+        add_custom_command(
+            DEPENDS   ${it}
+            OUTPUT    ${out}
+            COMMAND   ${CMAKE_COMMAND}
+            ARGS      -E copy_if_different ${it} ${out}
+            MAIN_DEPENDENCY ${it}
+            COMMENT   "Copy file to ${out}"
+    )
+    endforeach (it)
+    SOURCE_GROUP("Python" FILES ${FREECAD_LIBPACK_PYTHON})
 
 endif(WIN32 AND FREECAD_LIBPACK_USE)
 
