--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,13 +103,42 @@ endif(MSVC)
 
 OPTION(FREECAD_BUILD_GUI "Build FreeCAD Gui. Otherwise you have only the command line and the Python import module." ON)
 OPTION(FREECAD_MAINTAINERS_BUILD "Build FreeCAD for Maintainers, with Docu and 3rd party libs. On Windows the Installer is build." OFF)
+OPTION(FREECAD_USE_EXTERNAL_ZIPIOS "Use system installed zipios++ instead of the bundled." OFF)
+OPTION(FREECAD_USE_EXTERNAL_PIVY "Use system installed python-pivy instead of the bundled." OFF)
+OPTION(FREECAD_BUILD_DEBIAN "Prepare for a build of a Debian package" OFF)
+
 OPTION(FREECAD_BUILD_CAM "Build the FreeCAD CAM module and the needed libs, be aware, unfinished code!" OFF)
 OPTION(FREECAD_BUILD_FEM "Build the FreeCAD FEM module, be aware, unfinished code!" ON)
 OPTION(FREECAD_BUILD_SANDBOX "Build the FreeCAD Sandbox module which is only for testing purposes" OFF)
 OPTION(FREECAD_BUILD_TEMPLATE "Build the FreeCAD template module which is only for testing purposes" OFF)
-OPTION(FREECAD_BUILD_DEBIAN "Prepare for a build of a Debian package" OFF)
-OPTION(FREECAD_USE_EXTERNAL_ZIPIOS "Use system installed zipios++ instead of the bundled." OFF)
-OPTION(FREECAD_USE_EXTERNAL_PIVY "Use system installed python-pivy instead of the bundled." OFF)
+OPTION(FREECAD_BUILD_ARCH "Build the FreeCAD Architecture module" ON)
+OPTION(FREECAD_BUILD_ASSEMBLY "Build the FreeCAD Assembly module" ON)
+OPTION(FREECAD_BUILD_COMPLETE "Build the FreeCAD complete module" ON)
+OPTION(FREECAD_BUILD_DRAFT "Build the FreeCAD draft module" ON)
+OPTION(FREECAD_BUILD_DRAWING "Build the FreeCAD drawing module" ON)
+OPTION(FREECAD_BUILD_IDF "Build the FreeCAD idf module" ON)
+OPTION(FREECAD_BUILD_IMAGE "Build the FreeCAD image module" ON)
+OPTION(FREECAD_BUILD_IMPORT "Build the FreeCAD import module" ON)
+OPTION(FREECAD_BUILD_INSPECTION "Build the FreeCAD inspection module" ON)
+OPTION(FREECAD_BUILD_JTREADER "Build the FreeCAD jt reader module" OFF)
+OPTION(FREECAD_BUILD_MATERIAL "Build the FreeCAD material module" ON)
+OPTION(FREECAD_BUILD_MESH "Build the FreeCAD mesh module" ON)
+OPTION(FREECAD_BUILD_MESH_PART "Build the FreeCAD mesh part module" ON)
+OPTION(FREECAD_BUILD_OPENSCAD "Build the FreeCAD mesh openscad module" ON)
+OPTION(FREECAD_BUILD_PART "Build the FreeCAD mesh part module" ON)
+OPTION(FREECAD_BUILD_PART_DESIGN "Build the FreeCAD mesh part design module" ON)
+OPTION(FREECAD_BUILD_PLOT "Build the FreeCAD mesh plot module" ON)
+OPTION(FREECAD_BUILD_POINTS "Build the FreeCAD points module" ON)
+OPTION(FREECAD_BUILD_RAYTRACING "Build the FreeCAD ray tracing module" ON)
+OPTION(FREECAD_BUILD_REVERSEENGINEERING "Build the FreeCAD reverse engineering module" ON)
+OPTION(FREECAD_BUILD_ROBOT "Build the FreeCAD robot module" ON)
+OPTION(FREECAD_BUILD_SHIP "Build the FreeCAD ship module" ON)
+OPTION(FREECAD_BUILD_SKETCHER "Build the FreeCAD sketcher module" ON)
+OPTION(FREECAD_BUILD_SPREADSHEET "Build the FreeCAD spreadsheet module" ON)
+OPTION(FREECAD_BUILD_START "Build the FreeCAD start module" ON)
+OPTION(FREECAD_BUILD_TEST "Build the FreeCAD test module" ON)
+OPTION(FREECAD_BUILD_WEB "Build the FreeCAD web module" ON)
+
 if(MSVC)
 OPTION(FREECAD_USE_3DCONNEXION "Use the 3D connexion SDK to support 3d mouse." ON)
 OPTION(FREECAD_USE_FREETYPE "Builds the features using FreeType libs" OFF)
