group for Material project

--- a/src/Mod/Material/CMakeLists.txt
+++ b/src/Mod/Material/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(Material_SRCS
     importFCMat.py
     MaterialEditor.py
 )
-SOURCE_GROUP("" FILES ${Material_SRCS})
+SOURCE_GROUP("Module" FILES ${Material_SRCS})
 
 # collect all the material cards:
 #FILE( GLOB MaterialLib_Files ./StandardMaterial/*.FCMat ./StandardMaterial/*.txt  )
@@ -17,14 +17,16 @@ SET (MaterialLib_Files
     StandardMaterial/PLA.FCMat
     StandardMaterial/Readme.txt
 )
+SOURCE_GROUP("MatLib" FILES ${MaterialLib_Files})
 
-SET(all_files ${Material_SRCS})
+SET(all_files ${Material_SRCS}  ${MaterialLib_Files} )
 
 ADD_CUSTOM_TARGET(Material ALL
     SOURCES ${all_files}
 )
 
 fc_copy_sources(Material "${CMAKE_BINARY_DIR}/Mod/Material" ${all_files})
+
 
 fc_target_copy_resource(Material 
     ${CMAKE_SOURCE_DIR}/src/Mod/Material
