Start Gui for Displacement Post-Processing

--- a/src/Mod/Fem/CMakeLists.txt
+++ b/src/Mod/Fem/CMakeLists.txt
@@ -16,6 +16,7 @@ INSTALL(
         MechanicalMaterial.py
         MechanicalMaterial.ui
         MechanicalAnalysis.ui
+        ShowDisplacement.ui
     DESTINATION
         Mod/Fem
 )
