--- a/src/Mod/Fem/App/CMakeLists.txt
+++ b/src/Mod/Fem/App/CMakeLists.txt
@@ -66,8 +66,11 @@ SET(FemScripts_SRCS
     convert2TetGen.py
     FemLib.py
     CalculixLib.py
+    MechanicalAnalysis.ui
     MechanicalAnalysis.py
+    MechanicalMaterial.ui
     MechanicalMaterial.py
+    ShowDisplacement.ui
 )
 #SOURCE_GROUP("Scripts" FILES ${FemScripts_SRCS})
 
