add SCL python files

--- a/src/Mod/Material/CMakeLists.txt
+++ b/src/Mod/Material/CMakeLists.txt
@@ -25,8 +25,12 @@ ADD_CUSTOM_TARGET(Material ALL
     SOURCES ${all_files}
 )
 
-fc_copy_sources(Material "${CMAKE_BINARY_DIR}/Mod/Material" ${all_files})
+#fc_copy_sources(Material "${CMAKE_BINARY_DIR}/Mod/Material" ${Material_SRCS})
 
+fc_target_copy_resource(Material 
+    ${CMAKE_SOURCE_DIR}/src/Mod/Material
+    ${CMAKE_BINARY_DIR}/Mod/Material
+    ${Material_SRCS})
 
 fc_target_copy_resource(Material 
     ${CMAKE_SOURCE_DIR}/src/Mod/Material
