--- a/src/Mod/Import/App/CMakeLists.txt
+++ b/src/Mod/Import/App/CMakeLists.txt
@@ -31,8 +31,38 @@ SET(Import_SRCS
     PreCompiled.h
 )
 
+SET(SCL_Resources
+    SCL/__init__.py
+    SCL/AggregationDataTypes.py
+    SCL/BaseType.py
+    SCL/Builtin.py
+    SCL/ConstructedDataTypes.py
+    SCL/essa_par.py
+    SCL/Model.py
+    SCL/Part21.py
+    SCL/Rules.py
+    SCL/SCLBase.py
+    SCL/SimpleDataTypes.py
+    SCL/TypeChecker.py
+    SCL/Utils.py
+    automotive_design.py     # AP214e3
+    ifc2x3.py                # IFC
+    ifc4.py                  # IFC 4
+)
+SOURCE_GROUP("SCL" FILES ${SCL_Resources})
+
 add_library(Import SHARED ${Import_SRCS})
 target_link_libraries(Import ${Import_LIBS})
+
+ADD_CUSTOM_TARGET(ImportPy ALL
+    SOURCES ${SCL_Resources}
+)
+
+fc_target_copy_resource(ImportPy 
+    ${CMAKE_SOURCE_DIR}/src/Mod/Import/App
+    ${CMAKE_BINARY_DIR}/Mod/Import
+    ${SCL_Resources})
+
 
 if(MSVC)
     set_target_properties(Import PROPERTIES SUFFIX ".pyd")
