--- a/src/Mod/Web/App/CMakeLists.txt
+++ b/src/Mod/Web/App/CMakeLists.txt
@@ -59,7 +59,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Web PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Web)
     set_target_properties(Web PROPERTIES PREFIX "")
-    set_target_properties(Fem PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
+    set_target_properties(Web PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
 install(TARGETS Web DESTINATION lib)
