+ Shared library of Mefisto2F

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,5 +15,6 @@ BuildVersion.bat    export-ignore
 *.sln    export-ignore
 WindowsInstaller    export-ignore
 JtReader    export-ignore
+mefisto.patch    export-ignore
 Version.h.in    export-subst
 
