--- a/data/examples/CMakeLists.txt
+++ b/data/examples/CMakeLists.txt
@@ -48,6 +48,21 @@ if (WIN32 AND FREECAD_LIBPACK_USE)
     endforeach (it)
     SOURCE_GROUP("pivy\\gui" FILES ${FREECAD_LIBPACK_PIVY_SOQT})
 
+    # shiboken
+    foreach (it ${FREECAD_LIBPACK_SHIBOKEN})
+        get_filename_component(libfile ${it} NAME)
+        set(out "${CMAKE_BINARY_DIR}/lib/${libfile}")
+        add_custom_command(
+            DEPENDS   ${it}
+            OUTPUT    ${out}
+            COMMAND   ${CMAKE_COMMAND}
+            ARGS      -E copy_if_different ${it} ${out}
+            MAIN_DEPENDENCY ${it}
+            COMMENT   "Copy file to ${out}"
+    )
+    endforeach (it)
+    SOURCE_GROUP("Shiboken" FILES ${FREECAD_LIBPACK_SHIBOKEN})
+
     # PySide
     foreach (it ${FREECAD_LIBPACK_PYSIDE})
         get_filename_component(libfile ${it} NAME)
@@ -116,6 +131,7 @@ if (WIN32 AND FREECAD_LIBPACK_USE)
     set(FREECAD_LIBPACK_FILES
         ${FREECAD_LIBPACK_PIVY_COIN}
         ${FREECAD_LIBPACK_PIVY_SOQT}
+        ${FREECAD_LIBPACK_SHIBOKEN}
         ${FREECAD_LIBPACK_PYSIDE}
         ${FREECAD_LIBPACK_PYSIDEUIC_ABS}
         ${FREECAD_LIBPACK_PYTHON}
