+ Fix usage of Pivy from old LibPacks

--- a/src/3rdParty/CMakeLists.txt
+++ b/src/3rdParty/CMakeLists.txt
@@ -3,10 +3,11 @@ if(FREECAD_BUILD_CAM)
     add_subdirectory(ANN)
 endif(FREECAD_BUILD_CAM)
 
-if(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE6X)
-    add_subdirectory(Pivy)
-elseif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE7X)
-    add_subdirectory(Pivy-0.5)
+if(FREECAD_BUILD_GUI AND NOT FREECAD_USE_EXTERNAL_PIVY)
+    if(FREECAD_LIBPACK_CHECKFILE6X)
+        add_subdirectory(Pivy)
+    elseif(FREECAD_LIBPACK_CHECKFILE7X)
+        add_subdirectory(Pivy-0.5)
 #elseif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKCUSTOM)
 #   find_path(COIN_VERSION3 Inventor/scxml/ScXML.h ${COIN3D_INCLUDE_DIR})
 #   if (COIN_VERSION3)
@@ -19,8 +20,7 @@ elseif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE7X)
 #   add_subdirectory(Pivy)
 #endif(MINGW)
 # applies for Unix, MinGW and Windows with custom LibPack
-elseif(FREECAD_BUILD_GUI)
-    if (NOT FREECAD_USE_EXTERNAL_PIVY)
+    else(FREECAD_LIBPACK_CHECKFILE6X)
         find_path(COIN_VERSION3 Inventor/scxml/ScXML.h ${COIN3D_INCLUDE_DIR})
         if (COIN_VERSION3)
         if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy-0.5)
@@ -31,8 +31,8 @@ elseif(FREECAD_BUILD_GUI)
             add_subdirectory(Pivy)
         endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy)
         endif(COIN_VERSION3)
-    endif (NOT FREECAD_USE_EXTERNAL_PIVY)
-endif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE6X)
+    endif (FREECAD_LIBPACK_CHECKFILE6X)
+endif(FREECAD_BUILD_GUI AND NOT FREECAD_USE_EXTERNAL_PIVY)
 
 # Build SalomeMesh for all Platforms since heavily patched
 add_subdirectory(salomesmesh)
