--- a/src/Mod/PartDesign/CMakeLists.txt
+++ b/src/Mod/PartDesign/CMakeLists.txt
@@ -27,6 +27,18 @@ INSTALL(
         Scripts/Spring.py
     DESTINATION
         Mod/PartDesign/Scripts
+       )
+        
+INSTALL(
+    FILES
+        fcgear/__init__.py
+        fcgear/fcgear.py
+        fcgear/fcgeardialog.py
+        fcgear/involute.py
+        fcgear/svggear.py
+    DESTINATION
+        Mod/PartDesign/fcgear
+        
 )
 
 SET(WizardShaft_SRCS
