Implement the python gear feature

--- a/src/Mod/PartDesign/CMakeLists.txt
+++ b/src/Mod/PartDesign/CMakeLists.txt
@@ -11,6 +11,8 @@ INSTALL(
         InitGui.py
         TestPartDesignApp.py
         TestPartDesignGui.py
+        InvoluteGearFeature.py
+        InvoluteGearFeature.ui
     DESTINATION
         Mod/PartDesign
 )
