+ use dialog button box where possible, replace old Python icon

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -147,6 +147,7 @@ set(Gui_MOC_HDRS
     DlgOnlineHelpImp.h
     DlgParameterImp.h
     DlgPreferencesImp.h
+    DlgProjectInformationImp.h
     DlgProjectUtility.h
     DlgReportViewImp.h
     DlgSettings3DViewImp.h
