--- a/src/Mod/Sketcher/Gui/Resources/Makefile.am
+++ b/src/Mod/Sketcher/Gui/Resources/Makefile.am
@@ -61,6 +61,7 @@ icons/Constraint_PointOnObject.svg \
 		icons/Sketcher_ConstrainLock.svg \
 		icons/Sketcher_ConstrainVertical.svg \
 		icons/Sketcher_CreateArc.svg \
+        icons/Sketcher_Create3PointArc.svg \
 		icons/Sketcher_CreateCircle.svg \
 		icons/Sketcher_CreateLine.svg \
 		icons/Sketcher_CreatePoint.svg \
