+ fixes #0001490: Implement a perimeter circle (3 point circle) similar to solidworks in sketcher (mdinger)

--- a/src/Mod/Sketcher/Gui/Resources/Makefile.am
+++ b/src/Mod/Sketcher/Gui/Resources/Makefile.am
@@ -63,6 +63,7 @@ icons/Constraint_PointOnObject.svg \
 		icons/Sketcher_CreateArc.svg \
         icons/Sketcher_Create3PointArc.svg \
 		icons/Sketcher_CreateCircle.svg \
+        icons/Sketcher_Create3PointCircle.svg \
 		icons/Sketcher_CreateLine.svg \
 		icons/Sketcher_CreatePoint.svg \
 		icons/Sketcher_CreatePolyline.svg \
