--- a/src/3rdParty/Pivy-0.5/CMakeLists.txt
+++ b/src/3rdParty/Pivy-0.5/CMakeLists.txt
@@ -40,24 +40,10 @@ add_library(coin SHARED ${CoinPy_SRCS})
 
 target_link_libraries(coin ${CoinPy_LIBS})
 
-if(MSVC)
+SET_BIN_DIR(coin "_coin" "/bin/pivy")
+if(WIN32)
     set_target_properties(coin PROPERTIES SUFFIX ".pyd")
-    set_target_properties(coin PROPERTIES DEBUG_OUTPUT_NAME "_coin_d")
-    set_target_properties(coin PROPERTIES OUTPUT_NAME "_coin")
-    set_target_properties(coin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/pivy)
-    set_target_properties(coin PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(coin PROPERTIES SUFFIX ".pyd")
-    set_target_properties(coin PROPERTIES DEBUG_OUTPUT_NAME "_coin_d")
-    set_target_properties(coin PROPERTIES OUTPUT_NAME "_coin")
-    set_target_properties(coin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/pivy)
-    set_target_properties(coin PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(coin PROPERTIES OUTPUT_NAME "_coin")
-    set_target_properties(coin PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/pivy)
-    set_target_properties(coin PROPERTIES PREFIX "")
-    set_target_properties(coin PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/bin/pivy)
-endif(MSVC)
+endif(WIN32)
 
 fc_copy_sources(coin "${CMAKE_BINARY_DIR}/bin/pivy"
     __init__.py
@@ -98,24 +84,10 @@ add_library(soqt SHARED ${SoQtPy_SRCS})
 
 target_link_libraries(soqt ${SoQtPy_LIBS})
 
-if(MSVC)
+SET_BIN_DIR(soqt "_soqt" "/bin/pivy/gui")
+if(WIN32)
     set_target_properties(soqt PROPERTIES SUFFIX ".pyd")
-    set_target_properties(soqt PROPERTIES DEBUG_OUTPUT_NAME "_soqt_d")
-    set_target_properties(soqt PROPERTIES OUTPUT_NAME "_soqt")
-    set_target_properties(soqt PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/pivy/gui)
-    set_target_properties(soqt PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(soqt PROPERTIES SUFFIX ".pyd")
-    set_target_properties(soqt PROPERTIES DEBUG_OUTPUT_NAME "_soqt_d")
-    set_target_properties(soqt PROPERTIES OUTPUT_NAME "_soqt")
-    set_target_properties(soqt PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/pivy/gui)
-    set_target_properties(soqt PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(soqt PROPERTIES OUTPUT_NAME "_soqt")
-    set_target_properties(soqt PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/pivy/gui)
-    set_target_properties(soqt PROPERTIES PREFIX "")
-    set_target_properties(soqt PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/bin/pivy/gui)
-endif(MSVC)
+endif(WIN32)
 
 fc_copy_sources(soqt "${CMAKE_BINARY_DIR}/bin/pivy"
     gui/soqt.py
