--- a/src/3rdParty/salomesmesh/CMakeLists.txt
+++ b/src/3rdParty/salomesmesh/CMakeLists.txt
@@ -143,23 +143,11 @@ FILE(GLOB SMDS_source_files src/SMDS/*.cpp inc/SMDS*.hxx)
 ADD_LIBRARY(SMDS SHARED ${SMDS_source_files})
 TARGET_LINK_LIBRARIES(SMDS ${SMESH_LIBS})
 
-if(MSVC)
+SET_BIN_DIR(SMDS "SMDS" "/bin")
+if(WIN32)
     set_target_properties(SMDS PROPERTIES COMPILE_FLAGS "-DSMDS_EXPORTS")
-    set_target_properties(SMDS PROPERTIES DEBUG_OUTPUT_NAME "SMDSd")
-    set_target_properties(SMDS PROPERTIES OUTPUT_NAME "SMDS")
-    set_target_properties(SMDS PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(SMDS PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(SMDS PROPERTIES COMPILE_FLAGS "-DSMDS_EXPORTS")
-    set_target_properties(SMDS PROPERTIES OUTPUT_NAME "SMDS")
-    set_target_properties(SMDS PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(SMDS PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(SMDS PROPERTIES OUTPUT_NAME "SMDS")
-    set_target_properties(SMDS PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(SMDS PROPERTIES PREFIX "")
-    set_target_properties(SMDS PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
+endif(WIN32)
+
 
 ##########
 # Driver #
@@ -168,24 +156,10 @@ FILE(GLOB Driver_source_files src/Driver/*.cpp inc/Driver_*.hxx)
 ADD_LIBRARY(Driver SHARED ${Driver_source_files})
 TARGET_LINK_LIBRARIES(Driver ${SMESH_LIBS})
 
-if(MSVC)
+SET_BIN_DIR(Driver "Driver" "/bin")
+if(WIN32)
     set_target_properties(Driver PROPERTIES COMPILE_FLAGS "-DMESHDRIVER_EXPORTS")
-    set_target_properties(Driver PROPERTIES DEBUG_OUTPUT_NAME "Driverd")
-    set_target_properties(Driver PROPERTIES OUTPUT_NAME "Driver")
-    set_target_properties(Driver PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(Driver PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(Driver PROPERTIES COMPILE_FLAGS "-DMESHDRIVER_EXPORTS")
-    set_target_properties(Driver PROPERTIES OUTPUT_NAME "Driver")
-    set_target_properties(Driver PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(Driver PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Driver PROPERTIES OUTPUT_NAME "Driver")
-    set_target_properties(Driver PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(Driver PROPERTIES PREFIX "")
-    set_target_properties(Driver PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
-
+endif(WIN32)
 
 
 #IF(WIN32)
@@ -202,23 +176,10 @@ FILE(GLOB DriverSTL_source_files src/DriverSTL/*.cpp inc/DriverSTL*.h*)
 ADD_LIBRARY(DriverSTL SHARED ${DriverSTL_source_files})
 TARGET_LINK_LIBRARIES(DriverSTL ${SMESH_LIBS} Driver SMDS)
 
-if(MSVC)
+SET_BIN_DIR(DriverSTL "DriverSTL" "/bin")
+if(WIN32)
     set_target_properties(DriverSTL PROPERTIES COMPILE_FLAGS "-DMESHDRIVERSTL_EXPORTS")
-    set_target_properties(DriverSTL PROPERTIES DEBUG_OUTPUT_NAME "DriverSTLd")
-    set_target_properties(DriverSTL PROPERTIES OUTPUT_NAME "DriverSTL")
-    set_target_properties(DriverSTL PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(DriverSTL PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(DriverSTL PROPERTIES COMPILE_FLAGS "-DMESHDRIVERSTL_EXPORTS")
-    set_target_properties(DriverSTL PROPERTIES OUTPUT_NAME "DriverSTL")
-    set_target_properties(DriverSTL PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(DriverSTL PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(DriverSTL PROPERTIES OUTPUT_NAME "DriverSTL")
-    set_target_properties(DriverSTL PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(DriverSTL PROPERTIES PREFIX "")
-    set_target_properties(DriverSTL PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
+endif(WIN32)
 
 
 #TARGET_LINK_LIBRARIES(DriverSTL TKernel TKMath Driver SMDS)
@@ -236,24 +197,10 @@ FILE(GLOB DriverDAT_source_files src/DriverDAT/*.cpp inc/DriverDAT*.h*)
 ADD_LIBRARY(DriverDAT SHARED ${DriverDAT_source_files})
 TARGET_LINK_LIBRARIES(DriverDAT ${SMESH_LIBS} SMDS Driver)
 
-if(MSVC)
+SET_BIN_DIR(DriverDAT "DriverDAT" "/bin")
+if(WIN32)
     set_target_properties(DriverDAT PROPERTIES COMPILE_FLAGS "-DMESHDRIVERDAT_EXPORTS")
-    set_target_properties(DriverDAT PROPERTIES DEBUG_OUTPUT_NAME "DriverDATd")
-    set_target_properties(DriverDAT PROPERTIES OUTPUT_NAME "DriverDAT")
-    set_target_properties(DriverDAT PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(DriverDAT PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(DriverDAT PROPERTIES COMPILE_FLAGS "-DMESHDRIVERDAT_EXPORTS")
-    set_target_properties(DriverDAT PROPERTIES OUTPUT_NAME "DriverDAT")
-    set_target_properties(DriverDAT PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(DriverDAT PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(DriverDAT PROPERTIES OUTPUT_NAME "DriverDAT")
-    set_target_properties(DriverDAT PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(DriverDAT PROPERTIES PREFIX "")
-    set_target_properties(DriverDAT PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
-
+endif(WIN32)
 
 
 #IF(WIN32)
@@ -270,24 +217,10 @@ FILE(GLOB DriverUNV_source_files src/DriverUNV/*.cpp inc/DriverUNV*.h*)
 ADD_LIBRARY(DriverUNV SHARED ${DriverUNV_source_files})
 TARGET_LINK_LIBRARIES(DriverUNV ${SMESH_LIBS} SMESHDS SMDS Driver)
 
-if(MSVC)
+SET_BIN_DIR(DriverUNV "DriverUNV" "/bin")
+if(WIN32)
     set_target_properties(DriverUNV PROPERTIES COMPILE_FLAGS "-DMESHDRIVERUNV_EXPORTS")
-    set_target_properties(DriverUNV PROPERTIES DEBUG_OUTPUT_NAME "DriverUNVd")
-    set_target_properties(DriverUNV PROPERTIES OUTPUT_NAME "DriverUNV")
-    set_target_properties(DriverUNV PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(DriverUNV PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(DriverUNV PROPERTIES COMPILE_FLAGS "-DMESHDRIVERUNV_EXPORTS")
-    set_target_properties(DriverUNV PROPERTIES OUTPUT_NAME "DriverUNV")
-    set_target_properties(DriverUNV PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(DriverUNV PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(DriverUNV PROPERTIES OUTPUT_NAME "DriverUNV")
-    set_target_properties(DriverUNV PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(DriverUNV PROPERTIES PREFIX "")
-    set_target_properties(DriverUNV PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
-
+endif(WIN32)
 
 
 #IF(WIN32)
@@ -304,22 +237,7 @@ FILE(GLOB SMESHDS_source_files src/SMESHDS/*.cpp inc/SMESHDS_*.h*)
 ADD_LIBRARY(SMESHDS SHARED ${SMESHDS_source_files})
 TARGET_LINK_LIBRARIES(SMESHDS ${SMESH_LIBS} SMDS )
 
-if(MSVC)
-    set_target_properties(SMESHDS PROPERTIES DEBUG_OUTPUT_NAME "SMESHDSd")
-    set_target_properties(SMESHDS PROPERTIES OUTPUT_NAME "SMESHDS")
-    set_target_properties(SMESHDS PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(SMESHDS PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(SMESHDS PROPERTIES OUTPUT_NAME "SMESHDS")
-    set_target_properties(SMESHDS PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(SMESHDS PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(SMESHDS PROPERTIES OUTPUT_NAME "SMESHDS")
-    set_target_properties(SMESHDS PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(SMESHDS PROPERTIES PREFIX "")
-    set_target_properties(SMESHDS PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
-
+SET_BIN_DIR(SMESHDS "SMESHDS" "/bin")
 
 
 #IF(MINGW)
@@ -333,26 +251,13 @@ FILE(GLOB SMESH_source_files src/SMESH/*.cpp src/Controls/*.cpp inc/SMESH_*.h*)
 ADD_LIBRARY(SMESH SHARED ${SMESH_source_files})
 TARGET_LINK_LIBRARIES(SMESH SMDS SMESHDS  Driver DriverSTL DriverDAT DriverUNV ${SMESH_LIBS})
  
-if(MSVC)
+SET_BIN_DIR(SMESH "SMESH" "/bin")
+if(WIN32)
     set_target_properties(SMESH PROPERTIES COMPILE_FLAGS "-DSMESH_EXPORTS -DSMESHCONTROLS_EXPORTS -DSMESHimpl_EXPORTS")
-    set_target_properties(SMESH PROPERTIES DEBUG_OUTPUT_NAME "SMESHd")
-    set_target_properties(SMESH PROPERTIES OUTPUT_NAME "SMESH")
-    set_target_properties(SMESH PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(SMESH PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(SMESH PROPERTIES COMPILE_FLAGS "-DSMESH_EXPORTS -DSMESHCONTROLS_EXPORTS -DSMESHimpl_EXPORTS")
-    set_target_properties(SMESH PROPERTIES OUTPUT_NAME "SMESH")
-    set_target_properties(SMESH PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(SMESH PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(SMESH PROPERTIES OUTPUT_NAME "SMESH") 
-    set_target_properties(SMESH PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(SMESH PROPERTIES PREFIX "")
-    set_target_properties(SMESH PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
-					  
-					  
-#IF(WIN32)
+endif(WIN32)
+ 
+
+ #IF(WIN32)
 #  SET_TARGET_PROPERTIES(SMESH PROPERTIES COMPILE_FLAGS "-DSMESHimpl_EXPORTS -DSMESHCONTROLS_EXPORTS")
 #ENDIF(WIN32)
 #IF(MINGW)
@@ -391,6 +296,7 @@ endif(MSVC)
 
 ADD_LIBRARY(MEFISTO2 SHARED ${MEFISTO2_source_files})
 
+SET_BIN_DIR(MEFISTO2 "MEFISTO2" "/bin")
 if(MSVC)
     TARGET_LINK_LIBRARIES(MEFISTO2 ${SMESH_LIBS} MEFISTO2f.lib) # in case of Windows link the prebuild Fortran lib
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
@@ -398,23 +304,12 @@ if(MSVC)
     else(CMAKE_SIZEOF_VOID_P EQUAL 8)
         set_target_properties(MEFISTO2 PROPERTIES COMPILE_FLAGS "-DMEFISTO2D_EXPORTS -D__WATCOM__")
     endif(CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set_target_properties(MEFISTO2 PROPERTIES DEBUG_OUTPUT_NAME "MEFISTO2d")
-    set_target_properties(MEFISTO2 PROPERTIES OUTPUT_NAME "MEFISTO2")
-    set_target_properties(MEFISTO2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(MEFISTO2 PROPERTIES PREFIX "../")
 elseif(MINGW)
     TARGET_LINK_LIBRARIES(MEFISTO2 ${SMESH_LIBS} gfortran)
     set_target_properties(MEFISTO2 PROPERTIES COMPILE_FLAGS "-DMEFISTO2D_EXPORTS")
-    set_target_properties(MEFISTO2 PROPERTIES OUTPUT_NAME "MEFISTO2")
-    set_target_properties(MEFISTO2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(MEFISTO2 PROPERTIES PREFIX "")
 else(MSVC)
     TARGET_LINK_LIBRARIES(MEFISTO2 ${SMESH_LIBS} gfortran)
     set_target_properties(MEFISTO2 PROPERTIES COMPILE_FLAGS "${MEFISTO2_CFLAGS}")
-    set_target_properties(MEFISTO2 PROPERTIES OUTPUT_NAME "MEFISTO2") 
-    set_target_properties(MEFISTO2 PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(MEFISTO2 PROPERTIES PREFIX "")
-    set_target_properties(MEFISTO2 PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
 endif(MSVC)
 
 
@@ -423,28 +318,15 @@ endif(MSVC)
 ##############
 FILE(GLOB StdMeshers_source_files src/StdMeshers/*.cpp inc/StdMeshers_*.h*)
 ADD_LIBRARY(StdMeshers SHARED ${StdMeshers_source_files})
+TARGET_LINK_LIBRARIES(StdMeshers SMESH ${SMESH_LIBS} MEFISTO2)
 
-if(MSVC)
-    TARGET_LINK_LIBRARIES(StdMeshers SMESH ${SMESH_LIBS} MEFISTO2)
+SET_BIN_DIR(StdMeshers "StdMeshers" "/bin")
+if(WIN32)
     set_target_properties(StdMeshers PROPERTIES COMPILE_FLAGS "-DSTDMESHERS_EXPORTS")
-    set_target_properties(StdMeshers PROPERTIES DEBUG_OUTPUT_NAME "StdMeshersd")
-    set_target_properties(StdMeshers PROPERTIES OUTPUT_NAME "StdMeshers")
-    set_target_properties(StdMeshers PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(StdMeshers PROPERTIES PREFIX "../")
-elseif(MINGW)
-    TARGET_LINK_LIBRARIES(StdMeshers SMESH ${SMESH_LIBS} MEFISTO2)
-    set_target_properties(StdMeshers PROPERTIES COMPILE_FLAGS "-DSTDMESHERS_EXPORTS")
-    set_target_properties(StdMeshers PROPERTIES OUTPUT_NAME "StdMeshers")
-    set_target_properties(StdMeshers PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(StdMeshers PROPERTIES PREFIX "")
-else(MSVC)
-    TARGET_LINK_LIBRARIES(StdMeshers SMESH ${SMESH_LIBS}  MEFISTO2)
+else(WIN32)
     set_target_properties(StdMeshers PROPERTIES COMPILE_FLAGS "${StdMeshers_CFLAGS}")
-    set_target_properties(StdMeshers PROPERTIES OUTPUT_NAME "StdMeshers") 
-    set_target_properties(StdMeshers PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(StdMeshers PROPERTIES PREFIX "")
-    set_target_properties(StdMeshers PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
+endif(WIN32)
+
 
 #SET(StdMeshers_CFLAGS "")
 #IF(WIN32)
@@ -464,23 +346,10 @@ FILE(GLOB NETGENPlugin_source_files src/NETGENPlugin/*.cpp inc/NETGENPlugin_*.h*
 ADD_LIBRARY(NETGENPlugin SHARED ${NETGENPlugin_source_files})
 TARGET_LINK_LIBRARIES(NETGENPlugin SMDS SMESHDS SMESH StdMeshers  ${SMESH_LIBS} )
 
-if(MSVC)
+SET_BIN_DIR(NETGENPlugin "NETGENPlugin" "/bin")
+if(WIN32)
     set_target_properties(NETGENPlugin PROPERTIES COMPILE_FLAGS "-DNETGENPLUGIN_EXPORTS -DNO_PARALLEL_THREADS -DOCCGEOMETRY -DNETGEN_V5")
-    set_target_properties(NETGENPlugin PROPERTIES DEBUG_OUTPUT_NAME "NETGENPlugind")
-    set_target_properties(NETGENPlugin PROPERTIES OUTPUT_NAME "NETGENPlugin")
-    set_target_properties(NETGENPlugin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(NETGENPlugin PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(NETGENPlugin PROPERTIES COMPILE_FLAGS "-DNETGENPLUGIN_EXPORTS -DNO_PARALLEL_THREADS -DOCCGEOMETRY -DNETGEN_V5")
-    set_target_properties(NETGENPlugin PROPERTIES OUTPUT_NAME "NETGENPlugin")
-    set_target_properties(NETGENPlugin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(NETGENPlugin PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(NETGENPlugin PROPERTIES OUTPUT_NAME "NETGENPlugin") 
-    set_target_properties(NETGENPlugin PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(NETGENPlugin PROPERTIES PREFIX "")
-    set_target_properties(NETGENPlugin PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
-endif(MSVC)
+endif(WIN32)
 
 endif (FREECAD_BUILD_FEM_NETGEN)
 
