--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -45,22 +45,7 @@ if(FREECAD_BUILD_GUI)
     add_executable(FreeCADMain WIN32 ${FreeCAD_SRCS})
     target_link_libraries(FreeCADMain ${FreeCAD_LIBS})
 
-    # Note this is IDE specific, not necessarily platform specific
-    if(MSVC)
-        set_target_properties(FreeCADMain PROPERTIES OUTPUT_NAME "FreeCAD")
-        set_target_properties(FreeCADMain PROPERTIES DEBUG_OUTPUT_NAME "FreeCADD")
-        # dirty hack to avoid Debug/Release subdirectory
-        set_target_properties(FreeCADMain PROPERTIES PREFIX "../")
-        set_target_properties(FreeCADMain PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    elseif(MINGW)
-        set_target_properties(FreeCADMain PROPERTIES OUTPUT_NAME "FreeCAD")
-        set_target_properties(FreeCADMain PROPERTIES DEBUG_OUTPUT_NAME "FreeCADD")
-        set_target_properties(FreeCADMain PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    else(MSVC)
-        set_target_properties(FreeCADMain PROPERTIES OUTPUT_NAME "FreeCAD")
-        set_target_properties(FreeCADMain PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-        set_target_properties(FreeCADMain PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-    endif(MSVC)
+    SET_BIN_DIR(FreeCADMain "FreeCADMain" "/bin")
 
     if(WIN32)
         INSTALL(TARGETS FreeCADMain
@@ -86,22 +71,7 @@ target_link_libraries(FreeCADMainCmd
     ${QT_LIBRARIES}
 )
 
-# Note this is IDE specific, not necessarily platform specific
-if(MSVC)
-    set_target_properties(FreeCADMainCmd PROPERTIES OUTPUT_NAME "FreeCADCmd")
-    set_target_properties(FreeCADMainCmd PROPERTIES DEBUG_OUTPUT_NAME "FreeCADCmdD")
-    # dirty hack to avoid Debug/Release subdirectory
-    set_target_properties(FreeCADMainCmd PROPERTIES PREFIX "../")
-    set_target_properties(FreeCADMainCmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-elseif(MINGW)
-    set_target_properties(FreeCADMainCmd PROPERTIES OUTPUT_NAME "FreeCADCmd")
-    set_target_properties(FreeCADMainCmd PROPERTIES DEBUG_OUTPUT_NAME "FreeCADCmdD")
-    set_target_properties(FreeCADMainCmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-else(MSVC)
-    set_target_properties(FreeCADMainCmd PROPERTIES OUTPUT_NAME "FreeCADCmd")
-    set_target_properties(FreeCADMainCmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_target_properties(FreeCADMainCmd PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+SET_BIN_DIR(FreeCADMainCmd "FreeCADMainCmd" "/bin")
 
 if(WIN32)
     INSTALL(TARGETS FreeCADMainCmd
@@ -124,26 +94,10 @@ add_library(FreeCADMainPy SHARED ${FreeCADMainPy_SRCS})
 
 target_link_libraries(FreeCADMainPy FreeCADApp)
 
-# Note this is IDE specific, not necessarily platform specific
-if(MSVC)
-    set_target_properties(FreeCADMainPy PROPERTIES OUTPUT_NAME "FreeCAD")
-    set_target_properties(FreeCADMainPy PROPERTIES DEBUG_OUTPUT_NAME "FreeCAD_d")
+SET_BIN_DIR(FreeCADMainPy "FreeCADMainPy" "/bin")
+if(WIN32)
     set_target_properties(FreeCADMainPy PROPERTIES SUFFIX ".pyd")
-    # dirty hack to avoid Debug/Release subdirectory
-    set_target_properties(FreeCADMainPy PROPERTIES PREFIX "../")
-    set_target_properties(FreeCADMainPy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-elseif(MINGW)
-    set_target_properties(FreeCADMainPy PROPERTIES OUTPUT_NAME "FreeCAD")
-    set_target_properties(FreeCADMainPy PROPERTIES DEBUG_OUTPUT_NAME "FreeCAD_d")
-    set_target_properties(FreeCADMainPy PROPERTIES SUFFIX ".pyd")
-    set_target_properties(FreeCADMainPy PROPERTIES PREFIX "")
-    set_target_properties(FreeCADMainPy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-else(MSVC)
-    set_target_properties(FreeCADMainPy PROPERTIES OUTPUT_NAME "FreeCAD")
-    set_target_properties(FreeCADMainPy PROPERTIES PREFIX "")
-    set_target_properties(FreeCADMainPy PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set_target_properties(FreeCADMainPy PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 if(WIN32)
     INSTALL(TARGETS FreeCADMainPy
@@ -167,27 +121,11 @@ if(FREECAD_BUILD_GUI)
 
     target_link_libraries(FreeCADGuiPy FreeCADGui)
 
-    # Note this is IDE specific, not necessarily platform specific
-    if(MSVC)
-        set_target_properties(FreeCADGuiPy PROPERTIES OUTPUT_NAME "FreeCADGui")
-        set_target_properties(FreeCADGuiPy PROPERTIES DEBUG_OUTPUT_NAME "FreeCADGui_d")
+    SET_BIN_DIR(FreeCADGuiPy "FreeCADGuiPy" "/bin")
+    if(WIN32)
         set_target_properties(FreeCADGuiPy PROPERTIES SUFFIX ".pyd")
-        # dirty hack to avoid Debug/Release subdirectory
-        set_target_properties(FreeCADGuiPy PROPERTIES PREFIX "../")
-        set_target_properties(FreeCADGuiPy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    elseif(MINGW)
-        set_target_properties(FreeCADGuiPy PROPERTIES OUTPUT_NAME "FreeCADGui")
-        set_target_properties(FreeCADGuiPy PROPERTIES DEBUG_OUTPUT_NAME "FreeCADGui_d")
-        set_target_properties(FreeCADGuiPy PROPERTIES SUFFIX ".pyd")
-        set_target_properties(FreeCADGuiPy PROPERTIES PREFIX "")
-        set_target_properties(FreeCADGuiPy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    else(MSVC)
-        set_target_properties(FreeCADGuiPy PROPERTIES OUTPUT_NAME "FreeCADGui")
-        set_target_properties(FreeCADGuiPy PROPERTIES PREFIX "")
-        set_target_properties(FreeCADGuiPy PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-        set_target_properties(FreeCADGuiPy PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-    endif(MSVC)
-
+    endif(WIN32)
+    
     if(WIN32)
         INSTALL(TARGETS FreeCADGuiPy
             RUNTIME DESTINATION bin
